--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "debug": "~0.7.0"
+    "debug": "2"
   },
   "devDependencies": {
     "netroute": "~1.0.2"
